--- a/jinho1011/ministagram/.gitignore
+++ b/jinho1011/ministagram/.gitignore
@@ -144,4 +144,6 @@ dmypy.json
 # pytype static type analyzer
 .pytype/
 
+.DS_Store
+
 # End of https://www.toptal.com/developers/gitignore/api/django
