--- a/jinho1011/ministagram/.config/uwsgi/ministagram.ini
+++ b/jinho1011/ministagram/.config/uwsgi/ministagram.ini
@@ -6,7 +6,9 @@ home = /srv/Tasks/jinho1011/ministagram/myvenv
 uid = deploy
 gid = deploy
 
-http = :8080
+socket = /tmp/mysite.sock
+chmod-socket = 666
+chown-socket = deploy:deploy
 
 enable-threads = true
 master = true
